Commit new user registration form

--- a/inventory_management/templates/dashboard/index.html
+++ b/inventory_management/templates/dashboard/index.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+{% include 'partials/topside.html' %}
 <div class="row ">
     <div class="col-md-6 my-4">
         <div class="bg-white">
