--- a/inventory_management/templates/dashboard/order.html
+++ b/inventory_management/templates/dashboard/order.html
@@ -3,7 +3,7 @@
 
 {% block title %}Order page{% endblock %}
 {% block content %}
-
+{% include 'partials/topside.html' %}
 <div class="row my-4">
     <div class="col-md-4"></div>
     <div class="col-md-8">
