--- a/inventory_management/templates/dashboard/product.html
+++ b/inventory_management/templates/dashboard/product.html
@@ -2,7 +2,7 @@
 {% extends 'partials/base.html' %}
 {% block title %}Product page{% endblock %}
 {% block content %}
-
+{% include 'partials/topside.html' %}
 <div class="row my-4">
     <div class="col-md-4">
         {% if messages %}
