--- a/inventory_management/templates/partials/nav.html
+++ b/inventory_management/templates/partials/nav.html
@@ -26,11 +26,11 @@
            
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="#">Register <span
+                    <a class="nav-link text-white" href="{% url 'user-register' %}">Register <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Login</a>
+                    <a class="nav-link text-white" href="{% url 'user-login' %}">Login</a>
                 </li>
             </ul>
             
