--- a/inventory_management/templates/user/logout.html
+++ b/inventory_management/templates/user/logout.html
@@ -3,4 +3,18 @@
 <!-- Loading crispy to form -->
 {% load crispy_forms_tags %}
 {% block content %}
+
+<div class="container">
+    <div class="row mt-5 ">
+        <div class="col-md-6 offset-md-3 ">
+            <div class="border p-3 bg-white ">
+                <div class="alert alert-danger">
+                    <h4>You have been log out, see you soon!</h4>
+                </div>
+                 <a href="{% url 'user-login' %}">Login</a>                   
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
