Enforcing Security and access to the webapp

--- a/inventory_management/templates/user/login.html
+++ b/inventory_management/templates/user/login.html
@@ -15,7 +15,7 @@
                     {{ form|crispy }}<br>
                             <input class="btn btn-primary" type="submit" value="Register">
                 </form>
-            </div>s
+            </div>
         </div>
     </div>
 </div>
