--- a/inventory_management/templates/dashboard/product.html
+++ b/inventory_management/templates/dashboard/product.html
@@ -1,6 +1,8 @@
 
 {% extends 'partials/base.html' %}
 {% block title %}Product page{% endblock %}
+<!-- Loading crispy to form -->
+{% load crispy_forms_tags %}
 {% block content %}
 {% include 'partials/topside.html' %}
 <div class="row my-4">
@@ -17,8 +19,9 @@
             <hr>
             <form method="POST">
                 {% csrf_token %}
+                {{form|crispy}}
                 
-                <input class="btn btn-success btn-block" type="submit" value="Add">
+                <input class="btn btn-success btn-block" type="submit" value="Add Product">
             </form>
         </div>
     </div>
@@ -26,23 +29,29 @@
         <table class="table bg-white">
             <thead class="bg-info text-white">
                 <tr>
+                    <th scope="col">Code</th>
                     <th scope="col">Name</th>
                     <th scope="col">Category</th>
                     <th scope="col">Quantity</th>
-                    <th scope="col">Activity</th>
+                    <!-- <th scope="col">Activity</th> -->
+                    <th scope="col">Description</th>
+                    <th scope="col">Image</th>
                 </tr>
             </thead>
             <tbody>
-                {% for product in product %}
+                {% for item in items %}
                 <tr>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.category }}</td>
-                    <td>{{ product.quantity }}</td>
+                    <td>{{ item.code }}</td>
+                    <td>{{ item.name }}</td>
+                    <td>{{ item.category }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>{{ item.description }}</td>
+                    <td><img class="image_product" src="{{ item.image }}" alt="{{ item.name }}"  ></td>
                     <td>
                         <a class="btn btn-info btn-sm mr-2"
-                            href="{% url 'dashboard-products-edit' product.id %}">Edit</a>
+                            href="#">Edit</a>
                         <a class="btn btn-danger btn-sm ml-2"
-                            href="{% url 'dashboard-products-delete' product.id %}">Delete</a>
+                            href="#">Delete</a>
                     </td>
                 </tr>
                 {% endfor %}
