--- a/inventory_management/templates/partials/topside.html
+++ b/inventory_management/templates/partials/topside.html
@@ -48,6 +48,26 @@
                             </div>
                         </a>
                     </div>
+                    <div class="col-md-4">
+                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-client' %}">
+                            <div class="card my-card shadow">
+                                <div class="card-body text-center">
+                                    <h4>Clients <i class="fas fa-shipping-fast"></i></h4>
+                                    <h3>4</h3>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-supplier' %}">
+                            <div class="card my-card shadow">
+                                <div class="card-body text-center">
+                                    <h4>Suppliers <i class="fas fa-shipping-fast"></i></h4>
+                                    <h3>4</h3>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
