--- a/inventory_management/static/style.css
+++ b/inventory_management/static/style.css
@@ -1,11 +1,15 @@
 body{
     background: rgb(230, 227, 227);
 }
+
+h3{
+    text-align: center; 
+}
 .my-card:hover{
     transform: scale(1.1);
     transition: 0.2s ease-in-out;
 }
 
 .image_product{
-    width: 15px;
+    width: 100%;
 }
