--- a/inventory_management/templates/dashboard/product.html
+++ b/inventory_management/templates/dashboard/product.html
@@ -49,9 +49,9 @@
                     <td><img class="image_product" src="{{ item.image }}" alt="{{ item.name }}"  ></td>
                     <td>
                         <a class="btn btn-info btn-sm mr-2"
-                            href="#">Edit</a>
+                            href="{% url 'dashboard-product-update' item.id %}">Edit</a>
                         <a class="btn btn-danger btn-sm ml-2"
-                            href="#">Delete</a>
+                            href="{% url 'dashboard-product-delete' item.id %}">Delete</a>
                     </td>
                 </tr>
                 {% endfor %}
