--- a/inventory_management/templates/dashboard/client.html
+++ b/inventory_management/templates/dashboard/client.html
@@ -46,9 +46,9 @@
                     <td>{{ client.email }}</td>
                     <td>
                         <a class="btn btn-info btn-sm mr-2"
-                            href="#">Edit</a>
+                            href="{% url 'dashboard-client-update' client.id %}">Edit</a>
                         <a class="btn btn-danger btn-sm ml-2"
-                            href="#">Delete</a>
+                            href="{% url 'dashboard-client-delete' client.id %}">Delete</a>
                     </td>
                 </tr>
                 {% endfor %}
