--- a/inventory_management/templates/dashboard/client_update.html
+++ b/inventory_management/templates/dashboard/client_update.html
@@ -1,5 +1,5 @@
 {% extends 'partials/base.html' %}
-{% block title %}Edit Product page{% endblock  %}
+{% block title %}Edit Client page{% endblock  %}
 <!-- Loading crispy to form -->
 {% load crispy_forms_tags %}
 {% block content %}
@@ -7,7 +7,7 @@
         <div class="row mt-5">
             <div class="col-md-6 offset-md-3">
                 <div class="border bg-white p-3">
-                    <h3>Edit Product</h3>
+                    <h3>Edit Clent</h3>
                     <hr>
                     <form method="post" >
                         {% csrf_token %}  
