--- a/inventory_management/templates/dashboard/supplier_delete.html
+++ b/inventory_management/templates/dashboard/supplier_delete.html
@@ -1,5 +1,5 @@
 {% extends 'partials/base.html' %}
-{% block title %}Delete Client page{% endblock  %}
+{% block title %}Delete Supplier page{% endblock  %}
 <!-- Loading crispy to form -->
 {% load crispy_forms_tags %}
 {% block content %}
@@ -8,15 +8,15 @@
     <div class="row mt-5 ">
         <div class="col-md-6 offset-md-3 ">
             <div class="border p-3 bg-white ">
-                <h3>Delete Client</h3>
+                <h3>Delete Supplier</h3>
                 <hr>
                 <div class="alert alert-danger">
-                    <h4>Are you sure to delete this Client?</h4>
+                    <h4>Are you sure to delete this Supplier?</h4>
                 </div>
                 <form method="POST">
                     {% csrf_token %}
                     {{ form }}
-                    <a class="btn btn-secondary"  href="{% url 'dashboard-client' %}">Cancel</a> 
+                    <a class="btn btn-secondary"  href="{% url 'dashboard-supplier' %}">Cancel</a> 
                     <input class="btn btn-danger" type="submit" value="Confirm">
                 </form>
                 
