--- a/inventory_management/templates/dashboard/supplier.html
+++ b/inventory_management/templates/dashboard/supplier.html
@@ -48,9 +48,9 @@
                     <td>{{ supplier.email }}</td>
                     <td>
                         <a class="btn btn-info btn-sm mr-2"
-                            href="#">Edit</a>
+                            href="{% url 'dashboard-supplier-update' supplier.id %}">Edit</a>
                         <a class="btn btn-danger btn-sm ml-2"
-                            href="#">Delete</a>
+                            href="{% url 'dashboard-supplier-delete' supplier.id %}">Delete</a>
                     </td>
                 </tr>
                 {% endfor %}
