PurchaseOrder view.py forms.py, urls.py, add the datetime auto

--- a/inventory_management/templates/dashboard/purchase_order.html
+++ b/inventory_management/templates/dashboard/purchase_order.html
@@ -2,6 +2,7 @@
 {% extends 'partials/base.html' %}
 
 {% block title %}Purchase Order page{% endblock %}
+{% load crispy_forms_tags %}
 {% block content %}
 {% include 'partials/topside.html' %}
 <div class="row my-4">
@@ -18,13 +19,13 @@
             <hr>
             <form method="POST">
                 {% csrf_token %}
-                {{ forms|crispy }}
+                {{ form|crispy }}
                
                 
                 <input class="btn btn-success btn-block" type="submit" value="Add Client">
             </form>
         </div>
-    </div>
+    
     </div>
     <div class="col-md-8">
         <table class="table bg-white">
@@ -38,7 +39,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for order in order %}
+                {% for order in orders %}
                 <tr>
                     <td>{{ order.orderCode }}</td>
                     <td>{{ order.name.product }}</td>
