PurchaseOrder changes im models.py

--- a/inventory_management/templates/dashboard/purchase_order.html
+++ b/inventory_management/templates/dashboard/purchase_order.html
@@ -43,7 +43,7 @@
                 <tr>
                     <td>{{ order.orderCode }}</td>
                     <td>{{ order.name.product }}</td>
-                    <td>{{ order.supplier }}</td>
+                    <td>{{ order.name.supplier }}</td>
                     <td>{{ order.quantity }}</td>
                     <td>{{ order.order_date }}</td>
                 </tr>
