--- a/inventory_management/templates/dashboard/purchase_order.html
+++ b/inventory_management/templates/dashboard/purchase_order.html
@@ -5,7 +5,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 {% include 'partials/topside.html' %}
-<div class="row my-4">
+<div class="row my-4 ">
     <div class="col-md-4">
         {% if messages %}
         {% for message in messages %}
@@ -14,7 +14,18 @@
         </div>
         {% endfor %}
         {% endif %}
-        <div class="card card-body">
+        <div class="card card-body mb-3">
+            <h5>Search Purchase Order</h5>
+            <hr>
+           
+            <a href="{% url 'dashboard-purchase-order-list' %}">
+                <button class="btn btn-primary btn-block" type="button">Search</button>
+            </a>    
+           
+                
+            
+        </div>
+        <div  class="card card-body">
             <h5>New Purchase Order</h5>
             <hr>
             <form method="POST">
@@ -22,7 +33,7 @@
                 {{ form|crispy }}
                
                 
-                <input class="btn btn-success btn-block" type="submit" value="Add Client">
+                <input class="btn btn-success btn-block" type="submit" value="Add Client" >
             </form>
         </div>
     
@@ -32,6 +43,7 @@
             <thead class="bg-info text-white">
                 <tr>
                     <th scope="col">Order No</th>
+                    <th scope="col">Product Code</th>
                     <th scope="col">Product Name</th>
                     <th scope="col">Supplier Name</th>
                     <th scope="col">Quantity</th>
@@ -42,8 +54,9 @@
                 {% for order in orders %}
                 <tr>
                     <td>{{ order.orderCode }}</td>
-                    <td>{{ order.name.product }}</td>
-                    <td>{{ order.name.supplier }}</td>
+                    <td>{{ order.product.code }}</td>
+                    <td>{{ order.product.name }}</td>
+                    <td>{{ order.supplier }}</td>
                     <td>{{ order.quantity }}</td>
                     <td>{{ order.order_date }}</td>
                 </tr>
