--- a/inventory_management/templates/partials/base.html
+++ b/inventory_management/templates/partials/base.html
@@ -34,7 +34,9 @@
         {% block content %}
 
         {% endblock %}
-
+        {% block javascript %}
+        <script src="{% static 'js/script.js' %}"></script>
+        {% endblock %}
         </body>
 
 </html>
