--- a/inventory_management/templates/partials/topside.html
+++ b/inventory_management/templates/partials/topside.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-4 mt-4">
+    <!-- <div class="col-md-4 mt-4">
         <div class="card">
             <div class="card-header bg-info text-white">
                 Information
@@ -10,14 +10,14 @@
                 </marquee>
             </div>
         </div>
-    </div>
-    <div class="col-md-8 mt-4">
+    </div> -->
+    <div class="col-md-12 mt-4" style="height: 320px;" >
         <div class="card">
-            <div class="card-header bg-info text-white">
+            <div class="card-header bg-info text-white" >
                 Dashboard Statistics
             </div>
-            <div class="card-body">
-                <div class="row">
+            <div class="card-body" >
+                <div class="row" >
                     <div class="col-md-4">
                         <a class="text-decoration-none text-dark" href="{% url 'dashboard-staff' %}">
                             <div class="card my-card shadow">
@@ -28,7 +28,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4" >
                         <a class="text-decoration-none text-dark" href="{% url 'dashboard-product' %}">
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
