PurchaseOrder when purchase add quantity to product

--- a/inventory_management/templates/dashboard/purchase_order.html
+++ b/inventory_management/templates/dashboard/purchase_order.html
@@ -14,7 +14,7 @@
         </div>
         {% endfor %}
         {% endif %}
-        <div class="card card-body mb-3">
+        <!-- <div class="card card-body mb-3">
             <h5>Search Purchase Order</h5>
             <hr>
            
@@ -24,7 +24,7 @@
            
                 
             
-        </div>
+        </div> -->
         <div  class="card card-body">
             <h5>New Purchase Order</h5>
             <hr>
@@ -33,7 +33,7 @@
                 {{ form|crispy }}
                
                 
-                <input class="btn btn-success btn-block" type="submit" value="Add Client" >
+                <input class="btn btn-success btn-block" type="submit" value="Add Purchase" >
             </form>
         </div>
     
