--- a/inventory_management/templates/dashboard/client_order.html
+++ b/inventory_management/templates/dashboard/client_order.html
@@ -1,7 +1,7 @@
 
 {% extends 'partials/base.html' %}
 
-{% block title %}Purchase Order page{% endblock %}
+{% block title %}Client Order page{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 {% include 'partials/topside.html' %}
@@ -9,11 +9,19 @@
     <div class="col-md-4">
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}">
-            {{ message }}
+        <div class="alert alert-danger alert-{{ message.tags }}">
+            <h4>{{ message }}</h4>
         </div>
         {% endfor %}
         {% endif %}
+        <!-- <div class="col-md-6 offset-md-3 ">
+            <div class="border p-3 bg-white ">
+                <div class="alert alert-danger">
+                    <h4>You have been log out, see you soon!</h4>
+                </div>
+                 <a href="{% url 'user-login' %}">Login</a>                   
+            </div>
+        </div> -->
         <!-- <div class="card card-body mb-3">
             <h5>Search Purchase Order</h5>
             <hr>
@@ -26,26 +34,26 @@
             
         </div> -->
         <div  class="card card-body">
-            <h5>New Purchase Order</h5>
+            <h5>New Client Order</h5>
             <hr>
             <form method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
                
                 
-                <input class="btn btn-success btn-block" type="submit" value="Add Purchase" >
+                <input class="btn btn-success btn-block" type="submit" value="Add Order" >
             </form>
         </div>
     
     </div>
-    <div class="col-md-8 mt-4">
+    <div class="col-md-8">
         <table class="table bg-white">
             <thead class="bg-info text-white">
                 <tr>
                     <th scope="col">Order No</th>
                     <th scope="col">Product Code</th>
                     <th scope="col">Product Name</th>
-                    <th scope="col">Supplier Name</th>
+                    <th scope="col">Client Name</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Date</th>
                 </tr>
@@ -56,7 +64,7 @@
                     <td>{{ order.orderCode }}</td>
                     <td>{{ order.product.code }}</td>
                     <td>{{ order.product.name }}</td>
-                    <td>{{ order.supplier }}</td>
+                    <td>{{ order.client.name }}</td>
                     <td>{{ order.quantity }}</td>
                     <td>{{ order.order_date }}</td>
                 </tr>
