--- a/inventory_management/templates/partials/topside.html
+++ b/inventory_management/templates/partials/topside.html
@@ -11,7 +11,7 @@
             </div>
         </div>
     </div> -->
-    <div class="col-md-12 mt-4" style="height: 320px;" >
+    <div class="col-md-12 mt-4" > <!--style="height: 320px;"-->
         <div class="card">
             <div class="card-header bg-info text-white" >
                 Dashboard Statistics
@@ -23,7 +23,7 @@
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
                                     <h4>Staff <i class="fas fa-users"></i></h4>
-                                    <h3>4</h3>
+                                    <!-- <h3>4</h3> -->
                                 </div>
                             </div>
                         </a>
@@ -33,17 +33,17 @@
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
                                     <h4>Products <i class="fas fa-box"></i></h4>
-                                    <h3>120</h3>
+                                    <!-- <h3>120</h3> -->
                                 </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-order' %}">
+                        <a class="text-decoration-none text-dark" href="{% url 'dashboard-client-order' %}">
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
-                                    <h4>Orders <i class="fas fa-shipping-fast"></i></h4>
-                                    <h3>4</h3>
+                                    <h4>Client Orders <i class="fas fa-shipping-fast"></i> </h4>
+                                    <!-- <h3>4</h3> -->
                                 </div>
                             </div>
                         </a>
@@ -53,7 +53,7 @@
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
                                     <h4>Clients <i class="fas fa-shipping-fast"></i></h4>
-                                    <h3>4</h3>
+                                    <!-- <h3>4</h3> -->
                                 </div>
                             </div>
                         </a>
@@ -63,7 +63,7 @@
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
                                     <h4>Suppliers <i class="fas fa-shipping-fast"></i></h4>
-                                    <h3>4</h3>
+                                    <!-- <h3>4</h3> -->
                                 </div>
                             </div>
                         </a>
@@ -73,7 +73,7 @@
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
                                     <h4>Purchase Order <i class="fas fa-shipping-fast"></i></h4>
-                                    <h3>4</h3>
+                                    <!-- <h3>4</h3> -->
                                 </div>
                             </div>
                         </a>
