--- a/inventory_management/templates/dashboard/index.html
+++ b/inventory_management/templates/dashboard/index.html
@@ -1,7 +1,8 @@
 {% extends 'partials/base.html' %}
-
+{% block title %}Home Page{% endblock %}
 
 {% block content %}
+{% if user.is_authenticated and user.is_staff and user.is_superuser %}
 {% include 'partials/topside.html' %}
 <div class="row ">
     <div class="col-md-6 my-4">
@@ -13,10 +14,10 @@
                     var myChart1 = new Chart(ctx, {
                         type: 'pie',
                         data: {
-                            labels: [{% for product in product %} '{{product.name}}', {% endfor %}],
+                            labels: ['{% for product in product %} ','{{product.name}}', '{% endfor %}'],
                     datasets: [{
                         label: 'Number of Products',
-                        data: [{% for product in product %} {{ product.quantity }}, {% endfor %}],
+                        data: ['{% for product in product %}', '{{ product.quantity }}', '{% endfor %}'],
                         backgroundColor: [
                             'rgba(255, 99, 132, 1)',
                             'rgba(54, 162, 235, 1)',
@@ -59,10 +60,10 @@
                     var myChart = new Chart(ctx, {
                         type: 'bar',
                         data: {
-                            labels: [{% for order in order %} '{{order.name}}',{% endfor %}],
+                            labels: ['{% for order in orders %}', '{{order.name}}','{% endfor %}'],
                     datasets: [{
                         label: 'Orders',
-                        data: [{% for order in order %} {{ order.order_quantity }}, {% endfor %}],
+                        data: ['{% for order in orders %}', '{{ order.quantity }}', '{% endfor %}'],
                         backgroundColor: [
                             'rgba(255, 99, 132, 1)',
                             'rgba(54, 162, 235, 1)',
@@ -97,4 +98,8 @@
         </div>
     </div>
 </div>
+{% else %}
+<!-- {% include 'dashboard/customer_index.html' %} -->
+{% endif%}
+
 {% endblock %}
