--- a/inventory_management/templates/dashboard/supplier.html
+++ b/inventory_management/templates/dashboard/supplier.html
@@ -35,7 +35,8 @@
                     <th scope="col">Name</th>
                     <th scope="col">Telephone</th>
                     <th scope="col">Email</th>
-                   
+                    <th scope="col">Activity</th>
+                </tr>   
             </thead>
             <tbody>
                 {% for supplier in suppliers %}
