--- a/inventory_management/templates/dashboard/client.html
+++ b/inventory_management/templates/dashboard/client.html
@@ -35,6 +35,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Telephone</th>
                     <th scope="col">Email</th>
+                    <th scope="col">Activity</th>
                    
             </thead>
             <tbody>
