--- a/inventory_management/templates/dashboard/index.html
+++ b/inventory_management/templates/dashboard/index.html
@@ -14,10 +14,10 @@
                     var myChart1 = new Chart(ctx, {
                         type: 'pie',
                         data: {
-                            labels: ['{% for product in product %} ','{{product.name}}', '{% endfor %}'],
+                            labels: [{% for product in product %} '{{product.name}}', {% endfor %}],
                     datasets: [{
                         label: 'Number of Products',
-                        data: ['{% for product in product %}', '{{ product.quantity }}', '{% endfor %}'],
+                        data: [{% for product in product %} '{{ product.quantity }}', {% endfor %}],
                         backgroundColor: [
                             'rgba(255, 99, 132, 1)',
                             'rgba(54, 162, 235, 1)',
@@ -60,10 +60,10 @@
                     var myChart = new Chart(ctx, {
                         type: 'bar',
                         data: {
-                            labels: ['{% for order in orders %}', '{{order.name}}','{% endfor %}'],
+                            labels: [{% for order in product %} '{{order.name}}',{% endfor %}],
                     datasets: [{
-                        label: 'Orders',
-                        data: ['{% for order in orders %}', '{{ order.quantity }}', '{% endfor %}'],
+                        label: 'Products',
+                        data: [{% for order in product %} '{{ order.quantity }}', {% endfor %}],
                         backgroundColor: [
                             'rgba(255, 99, 132, 1)',
                             'rgba(54, 162, 235, 1)',
