--- a/inventory_management/templates/partials/topside.html
+++ b/inventory_management/templates/partials/topside.html
@@ -42,7 +42,7 @@
                         <a class="text-decoration-none text-dark" href="{% url 'dashboard-client-order' %}">
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
-                                    <h4>Client Orders <i class="fas fa-shipping-fast"></i> </h4>
+                                    <h4>Client Orders <i class="fas fa-user"></i> </h4>
                                     <!-- <h3>4</h3> -->
                                 </div>
                             </div>
@@ -52,7 +52,7 @@
                         <a class="text-decoration-none text-dark" href="{% url 'dashboard-client' %}">
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
-                                    <h4>Clients <i class="fas fa-shipping-fast"></i></h4>
+                                    <h4>Clients <i class="fas fa-user"></i></h4>
                                     <!-- <h3>4</h3> -->
                                 </div>
                             </div>
